<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:focusable="false"
    android:longClickable="false"
    android:orientation="vertical" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Connect"
        android:id="@+id/Connect"
        android:onClick="onButtonConnect"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Disconnect"
        android:id="@+id/Disconnect"
        android:onClick="onButtonDisconnect"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Play"
        android:id="@+id/Play"
        android:onClick="onButtonPlay"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Stop"
        android:id="@+id/Stop"
        android:onClick="onButtonStop"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pause"
        android:id="@+id/Pause"
        android:onClick="onButtonPlayPause"
        />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:longClickable="false"
        android:orientation="horizontal" >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/SetVolume"
            android:id="@+id/SetVolume"
            android:onClick="onButtonSetVolume"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/GetVolume"
            android:id="@+id/Next"
            android:onClick="onButtonGetVolume"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:longClickable="false"
        android:orientation="horizontal" >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/SetProgress"
            android:id="@+id/SetProgress"
            android:onClick="onButtonSetProgress"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/GetPositionInfo"
            android:id="@+id/GetPositionInfo"
            android:onClick="onButtonGetPositionInfo"
            android:layout_weight="1"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowPhoto"
        android:id="@+id/ShowPhoto"
        android:onClick="onButtonShowPhoto"
        />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false"
        android:longClickable="false"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/StartSlideshow"
            android:id="@+id/StartSlideshow"
            android:onClick="onButtonStartSlideshow"
            android:layout_weight="1" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/StopSlideshow"
            android:id="@+id/StopSlideshow"
            android:onClick="onButtonStopSlideshow"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>