<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:focusable="false"
    android:longClickable="false"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7.93"
        android:background="@android:color/darker_gray"
        android:scrollbars="vertical" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Connect"
        android:id="@+id/Connect"
        android:onClick="onButtonConnect"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Disconnect"
        android:id="@+id/Disconnect"
        android:onClick="onButtonDisconnect"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Play"
        android:id="@+id/Play"
        android:onClick="onButtonPlay"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:id="@+id/Next"
        android:onClick="onButtonNext"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Stop"
        android:id="@+id/Stop"
        android:onClick="onButtonStop"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pause"
        android:id="@+id/Pause"
        android:onClick="onButtonPlayPause"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SetVolume"
        android:id="@+id/SetVolume"
        android:onClick="onButtonSetVolume"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SetProgress"
        android:id="@+id/SetProgress"
        android:onClick="onButtonSetProgress"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GetProgress"
        android:id="@+id/GetProgress"
        android:onClick="onButtonGetProgress"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GetDuration"
        android:id="@+id/GetDuration"
        android:onClick="onButtonGetDuration"
        />

</LinearLayout>